deploy/sonarqube-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: devops-tools
  labels:
    app: sonarqube-server
spec:
  selector:
    app: sonarqube-server
  type: NodePort
  ports:
    - name: sonarqube-server-port
      protocol: TCP
      port: 9000
      targetPort: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: devops-tools
  annotations:
    # GKE
    beta.cloud.google.com/backend-config: '{"ports": {"9000":"sonar-backendconfig"}}'
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/expose-internal-ips: "true"
#    # AKS
#    kubernetes.io/ingress.class: "nginx"
#    # AWS
#    kubernetes.io/ingress.class: "alb"
spec:
  rules:
    - host: sonarqube.my-company.com
      http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: sonarqube-service
                port:
                  number: 9000
